--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     function create ()
     {
         this.add.image(400, 320, 'bg');
-        //this.add.image(400, 400, 'wall');
-        //this.add.image(400, 200, 'player');
+        this.add.image(400, 400, 'wall');
+        this.add.image(400, 200, 'player');
         
         //Create walls physics object
         walls = this.physics.add.staticGroup();
