--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 
         
         this.add.image(400, 320, 'bg');        
-		this.add.image(400, 400, 'wall');
-        this.add.image(400, 200, 'player');		
+		//this.add.image(400, 400, 'wall');
+        //this.add.image(400, 200, 'player');		
         happyBackgroundMusic = this.sound.add('poppins_quality_whistling');
         happyBackgroundMusic.play();
 		
